# edge-protocol-demo

./: .gitignore  BRANCHING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
dashboard/: Cargo.toml  Trunk.toml  index.html
dashboard/src/: api.rs  lib.rs
dashboard/src/components/: capability.rs  header.rs  mod.rs  rate_limiter.rs  tabs.rs  url_shortener.rs
docs/: ARCHITECTURE.md
shared/: Cargo.toml
shared/src/: lib.rs
workers/capability-demo/: Cargo.toml  wrangler.toml
workers/capability-demo/src/: lib.rs
workers/protocol-parser/: Cargo.toml  wrangler.toml
workers/protocol-parser/src/: lib.rs
workers/rate-limiter/: Cargo.toml  wrangler.toml
workers/rate-limiter/src/: lib.rs
workers/telemetry-voter/: Cargo.toml  wrangler.toml
workers/telemetry-voter/src/: lib.rs
workers/url-shortener/: Cargo.toml  wrangler.toml
workers/url-shortener/src/: lib.rs
