[workspace]
resolver = "2"
members = [
    "shared",
    "workers/url-shortener",
    "workers/rate-limiter", 
    "workers/capability-demo",
    "dashboard",
]
default-members = [
    "shared",
    "workers/url-shortener",
    "workers/rate-limiter", 
    "workers/capability-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["gammahazard"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
worker = "0.7"

