[package]
name = "url-shortener"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../../shared" }
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"

[profile.release]
opt-level = "s"
lto = true
