[package]
name = "url-shortener"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../../shared" }
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"

[profile.release]
opt-level = "s"
lto = true
